--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
-<title>Choco Milky IPA Library V2</title>
+<title>Choco Milky IPA Library revived</title>
 <style>
 :root{
   --bg:#0d0d0f; --card:rgba(28,28,32,0.85); --accent:#0a84ff; --text:#f5f5f7;
@@ -15,7 +15,6 @@ header{padding:28px 20px;text-align:center}
 h1{margin:0;font-size:22px;font-weight:600}
 #container{max-width:1100px;margin:0 auto;padding:12px 20px 40px}
 #repos{display:flex;flex-direction:column;gap:12px;margin:18px auto;max-width:800px}
-.repo-section-title{color:var(--subtle);font-weight:700;margin-top:8px;margin-bottom:6px}
 .repo-card{display:flex;align-items:center;gap:12px;background:var(--card);padding:12px;border-radius:14px;box-shadow:var(--shadow);flex-wrap:wrap}
 .repo-card img{width:48px;height:48px;border-radius:10px;object-fit:cover}
 .repo-info{flex:1;min-width:180px}
@@ -24,10 +23,9 @@ h1{margin:0;font-size:22px;font-weight:600}
 .repo-actions{display:flex;gap:8px}
 .repo-actions button{padding:8px 10px;border-radius:12px;border:0;background:var(--accent);color:#fff;cursor:pointer;font-weight:700}
 .repo-actions button.copy{background:#444}
-.repo-actions button.delete{background:#ff3b30}
 #searchBar{display:none;justify-content:center;margin:14px auto;max-width:600px}
 #searchInput{flex:1;padding:12px;border-radius:14px;border:1px solid rgba(255,255,255,0.06);background:rgba(255,255,255,0.03);color:var(--text)}
-#apps{display:grid;grid-template-columns:repeat(auto-fill,minmax(220px,1fr));gap:18px;padding:18px;flex:1;max-width:1100px;margin:18px auto}
+#apps{display:grid;grid-template-columns:repeat(auto-fill,minmax(220px,1fr));gap:18px;padding:18px;flex:1;max-width:1100px;margin:18px auto;overflow:auto;max-height:70vh}
 .card{background:var(--card);border-radius:16px;padding:16px;text-align:center;box-shadow:var(--shadow);display:flex;flex-direction:column;align-items:center}
 .icon img{width:72px;height:72px;border-radius:14px;object-fit:cover;margin-bottom:12px}
 .title{font-weight:700;margin-bottom:6px}
@@ -42,20 +40,16 @@ footer{text-align:center;color:var(--subtle);padding:18px 0;margin-top:auto}
 </style>
 </head>
 <body>
-<header><h1>Choco Milky IPA Library V2 - revived</h1></header>
+<header><h1>Choco Milky IPA Library - revived</h1></header>
 <div id="container">
-
   <div id="repos"></div>
-
   <button id="backBtn">← Back to Libraries</button>
-
   <div id="searchBar"><input id="searchInput" type="text" placeholder="Search apps…"></div>
-
   <div id="apps"></div>
 </div>
 
 <div id="toast"></div>
-<footer>© 2026 Choco Milky IPA Library V2 - revived by @gablilli</footer>
+<footer>© 2026 Choco Milky IPA Library - revived by @gablilli</footer>
 
 <script>
 const reposArea = document.getElementById('repos');
@@ -67,6 +61,8 @@ const toast = document.getElementById('toast');
 
 let currentApps = [];
 let viewingRepoUrl = null;
+let appsPerPage = 20;
+let currentIndex = 0;
 
 function showToast(msg, ms = 1500) {
   toast.textContent = msg;
@@ -75,50 +71,46 @@ function showToast(msg, ms = 1500) {
   toast._t = setTimeout(() => (toast.style.display = 'none'), ms);
 }
 
-// =======================================================
-// Load repos from backend
-// =======================================================
+// parallel fetch for repos
 async function loadRepos() {
   reposArea.innerHTML = `<div class="loading-line">Loading libraries…</div>`;
-
   try {
-    // Fetch global repos JSON
     const res = await fetch("/chocomilky-revived/back/global-repos.json");
     const globals = await res.json();
-
     if (!globals.repos || globals.repos.length === 0) {
       reposArea.innerHTML = `<div class="loading-line">No libraries loaded.</div>`;
       return;
     }
 
-    let out = "";
-    for (const repo of globals.repos) {
-      try {
-        const r = await fetch(repo.url);
-        const data = await r.json();
+    const fetches = globals.repos.map(r =>
+      fetch(r.url)
+        .then(res => res.json())
+        .catch(() => null)
+    );
+    const results = await Promise.all(fetches);
 
-        const first = (data.apps && data.apps[0]) || {};
-        const icon = data.iconURL || first.iconURL || "";
-        const name = data.name || first.name || "Unnamed Repo";
-        const desc = data.description || first.subtitle || first.localizedDescription || "";
-        
-        out += `
-          <div class="repo-card" data-url="${repo.url}">
-            <img src="${icon}" alt="">
-            <div class="repo-info">
-              <div class="repo-name">${name}</div>
-              <div class="repo-desc">${desc}</div>
-            </div>
-            <div class="repo-actions">
-              <button class="openBtn" data-url="${repo.url}">Open</button>
-              <button class="copyBtn" data-url="${repo.url}">Copy URL</button>
-            </div>
+    let out = "";
+    results.forEach((data, i) => {
+      if (!data) return;
+      const repo = globals.repos[i];
+      const first = (data.apps && data.apps[0]) || {};
+      const icon = data.iconURL || first.iconURL || "";
+      const name = data.name || first.name || "Unnamed Repo";
+      const desc = data.description || first.subtitle || first.localizedDescription || "";
+      out += `
+        <div class="repo-card" data-url="${repo.url}">
+          <img src="${icon}" alt="">
+          <div class="repo-info">
+            <div class="repo-name">${name}</div>
+            <div class="repo-desc">${desc}</div>
           </div>
-        `;
-      } catch (e) {
-        console.warn("Failed to load repo:", repo.url);
-      }
-    }
+          <div class="repo-actions">
+            <button class="openBtn" data-url="${repo.url}">Open</button>
+            <button class="copyBtn" data-url="${repo.url}">Copy URL</button>
+          </div>
+        </div>
+      `;
+    });
 
     reposArea.innerHTML = out;
     attachRepoHandlers();
@@ -130,18 +122,10 @@ async function loadRepos() {
 }
 
 function attachRepoHandlers() {
-  document.querySelectorAll(".openBtn").forEach(btn => {
-    btn.onclick = () => openRepo(btn.dataset.url);
-  });
-  document.querySelectorAll(".copyBtn").forEach(btn => {
-    btn.onclick = async () => {
-      try {
-        await navigator.clipboard.writeText(btn.dataset.url);
-        showToast("Copied URL");
-      } catch {
-        alert("Copy failed");
-      }
-    };
+  document.querySelectorAll(".openBtn").forEach(btn => btn.onclick = () => openRepo(btn.dataset.url));
+  document.querySelectorAll(".copyBtn").forEach(btn => btn.onclick = async () => {
+    try { await navigator.clipboard.writeText(btn.dataset.url); showToast("Copied URL"); }
+    catch { alert("Copy failed"); }
   });
 }
 
@@ -156,26 +140,25 @@ async function openRepo(url) {
   try {
     const res = await fetch(url);
     const repo = await res.json();
-    const apps = repo.apps || [];
-    currentApps = apps;
-    renderApps(apps);
-  } catch (e) {
+    currentApps = repo.apps || [];
+    currentIndex = 0;
+    renderAppsLazy(currentApps, true);
+  } catch(e) {
     console.error(e);
     appsArea.innerHTML = `<div class="loading-line">Error loading repo.</div>`;
   }
 }
 
-function renderApps(apps) {
-  if (!apps || apps.length === 0) {
-    appsArea.innerHTML = `<div class="loading-line">No apps found.</div>`;
-    return;
-  }
-  appsArea.innerHTML = "";
-  apps.forEach(app => {
+// lazy
+function renderAppsLazy(apps, reset = true) {
+  if (reset) { appsArea.innerHTML = ""; currentIndex = 0; }
+  const slice = apps.slice(currentIndex, currentIndex + appsPerPage);
+  slice.forEach(app => {
     const latest = (app.versions && app.versions.length) ? app.versions[0] : {};
     const version = latest.version || app.version || "";
     const desc = app.subtitle || app.localizedDescription || latest.localizedDescription || "";
     const downloadURL = app.downloadURL || latest.downloadURL || "#";
+
     const card = document.createElement("div");
     card.className = "card";
     card.innerHTML = `
@@ -187,10 +170,20 @@ function renderApps(apps) {
     `;
     appsArea.appendChild(card);
   });
+  currentIndex += appsPerPage;
 }
 
+// infinite scroll
+appsArea.addEventListener("scroll", () => {
+  if (appsArea.scrollTop + appsArea.clientHeight >= appsArea.scrollHeight - 10) {
+    renderAppsLazy(currentApps, false);
+  }
+});
+
+// go back
 backBtn.addEventListener("click", () => {
   viewingRepoUrl = null;
+  currentApps = [];
   appsArea.innerHTML = "";
   reposArea.style.display = "";
   backBtn.style.display = "none";
@@ -198,20 +191,18 @@ backBtn.addEventListener("click", () => {
   window.scrollTo({ top: 0, behavior: "auto" });
 });
 
+// search things
 searchInput.addEventListener("input", () => {
   const q = searchInput.value.toLowerCase();
   const filtered = (currentApps || []).filter(app => {
     const latest = (app.versions && app.versions.length) ? app.versions[0] : {};
-    const fields = [
-      app.name, app.subtitle, app.localizedDescription,
-      app.developerName, app.bundleIdentifier, latest.localizedDescription
-    ];
+    const fields = [app.name, app.subtitle, app.localizedDescription, app.developerName, app.bundleIdentifier, latest.localizedDescription];
     return fields.some(f => f && f.toLowerCase().includes(q));
   });
-  renderApps(filtered);
+  renderAppsLazy(filtered, true);
 });
 
-// =======================================================
+// load
 loadRepos();
 </script>
 </body>
