--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ const toast = document.getElementById('toast');
 
 let currentApps = [];
 let viewingRepoUrl = null;
-const proxy = "https://api.allorigins.win/raw?url=";
+const proxy = "https://cors-anywhere.herokuapp.com/";
 
 function showToast(msg, ms = 1500) {
   toast.textContent = msg;
