--- a/index.html
+++ b/index.html
@@ -4,42 +4,7 @@
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
 <title>Choco Milky IPA Library revived</title>
-<style>
-:root{
-  --bg:#0d0d0f; --card:rgba(28,28,32,0.85); --accent:#0a84ff; --text:#f5f5f7;
-  --subtle:#9ca3af; --radius:18px; --shadow:0 8px 24px rgba(0,0,0,0.4);
-  font-family:-apple-system,BlinkMacSystemFont,"SF Pro Display","Segoe UI",Roboto,Helvetica,Arial,sans-serif;
-}
-body{margin:0;background:var(--bg);color:var(--text);display:flex;flex-direction:column;min-height:100vh}
-header{padding:28px 20px;text-align:center}
-h1{margin:0;font-size:22px;font-weight:600}
-#container{max-width:1100px;margin:0 auto;padding:12px 20px 40px}
-#repos{display:flex;flex-direction:column;gap:12px;margin:18px auto;max-width:800px}
-.repo-card{display:flex;align-items:center;gap:12px;background:var(--card);padding:12px;border-radius:14px;box-shadow:var(--shadow);flex-wrap:wrap}
-.repo-card img{width:48px;height:48px;border-radius:10px;object-fit:cover}
-.repo-info{flex:1;min-width:180px}
-.repo-name{font-weight:700}
-.repo-desc{color:var(--subtle);font-size:13px;margin-top:4px}
-.repo-actions{display:flex;gap:8px}
-.repo-actions button{padding:8px 10px;border-radius:12px;border:0;background:var(--accent);color:#fff;cursor:pointer;font-weight:700}
-.repo-actions button.copy{background:#444}
-#searchBar{display:none;justify-content:center;margin:14px auto;max-width:600px}
-#searchInput{flex:1;padding:12px;border-radius:14px;border:1px solid rgba(255,255,255,0.06);background:rgba(255,255,255,0.03);color:var(--text)}
-#apps{display:grid;grid-template-columns:repeat(auto-fill,minmax(220px,1fr));gap:18px;padding:18px;flex:1;max-width:1100px;margin:18px auto}
-.card{background:var(--card);border-radius:16px;padding:16px;text-align:center;box-shadow:var(--shadow);display:flex;flex-direction:column;align-items:center}
-.icon img{width:72px;height:72px;border-radius:14px;object-fit:cover;margin-bottom:12px}
-.title{font-weight:700;margin-bottom:6px}
-.subtitle{color:var(--subtle);font-size:13px;margin-bottom:8px}
-.version{font-size:12px;color:#aaa;margin-bottom:12px}
-.download{display:inline-block;padding:10px 14px;border-radius:14px;background:var(--accent);color:#fff;text-decoration:none;font-weight:700}
-#backBtn{display:none;margin:8px auto;background:#333;color:#fff;border:0;padding:10px 16px;border-radius:14px;cursor:pointer;font-weight:700}
-#toast{position:fixed;top:18px;left:50%;transform:translateX(-50%);background:rgba(0,0,0,0.85);color:#fff;padding:10px 16px;border-radius:12px;display:none;z-index:9999}
-.loading-line{color:#999;text-align:center;padding:14px}
-.skeleton {background: rgba(255,255,255,0.05); height: 100px; border-radius: 16px; animation: pulse 1.2s infinite;}
-@keyframes pulse {0% {opacity:0.5;} 50% {opacity:1;} 100% {opacity:0.5;}}
-footer{text-align:center;color:var(--subtle);padding:18px 0;margin-top:auto}
-@media (max-width:640px){.repo-card{flex-direction:column;align-items:flex-start}.repo-actions{width:100%;justify-content:flex-end}}
-</style>
+<link rel="stylesheet" href="/static/css/style.css">
 </head>
 <body>
 <header><h1>Choco Milky IPA Library - revived</h1></header>
@@ -51,179 +16,5 @@ footer{text-align:center;color:var(--subtle);padding:18px 0;margin-top:auto}
 </div>
 <div id="toast"></div>
 <footer>© 2026 Choco Milky IPA Library V2 - revived by @gablilli</footer>
-
-<script>
-const reposArea = document.getElementById('repos');
-const appsArea = document.getElementById('apps');
-const backBtn = document.getElementById('backBtn');
-const searchBar = document.getElementById('searchBar');
-const searchInput = document.getElementById('searchInput');
-const toast = document.getElementById('toast');
-
-let currentApps = [];
-let viewingRepoUrl = null;
-const proxy = "https://proxy-sooty-ten-88.vercel.app/api/proxy?url=";
-
-function showToast(msg, ms = 1500) {
-  toast.textContent = msg;
-  toast.style.display = 'block';
-  clearTimeout(toast._t);
-  toast._t = setTimeout(() => (toast.style.display = 'none'), ms);
-}
-
-// fetch functions
-const fetchRepo = async (repo) => {
-  const url = repo.useProxy ? proxy + encodeURIComponent(repo.url) : repo.url;
-  try {
-    const r = await fetch(url);
-    return await r.json();
-  } catch (err) {
-    console.warn("Failed to fetch repo:", repo.url);
-    return null;
-  }
-};
-
-const loadAllRepos = async (repos) => {
-  const results = await Promise.all(repos.map(fetchRepo));
-  return results.filter(r => r);
-};
-
-// Load and render repos
-async function loadRepos() {
-  reposArea.innerHTML = `<div class="loading-line">Loading libraries…</div>`;
-  try {
-    const res = await fetch("/chocomilky-revived/back/global-repos.json");
-    const globals = await res.json();
-    if (!globals.repos || globals.repos.length === 0) {
-      reposArea.innerHTML = `<div class="loading-line">No libraries loaded.</div>`;
-      return;
-    }
-
-    const reposData = await loadAllRepos(globals.repos);
-    let out = "";
-    for (let i = 0; i < reposData.length; i++) {
-      const data = reposData[i];
-      const repoMeta = globals.repos[i];
-      const first = (data.apps && data.apps[0]) || {};
-      const icon = data.iconURL || first.iconURL || "";
-      const name = data.name || first.name || "Unnamed Repo";
-      const desc = data.description || first.subtitle || first.localizedDescription || "";
-      out += `
-        <div class="repo-card" data-url="${repoMeta.url}">
-          <img src="${icon}" alt="">
-          <div class="repo-info">
-            <div class="repo-name">${name}</div>
-            <div class="repo-desc">${desc}</div>
-          </div>
-          <div class="repo-actions">
-            <button class="openBtn" data-url="${repoMeta.url}" data-use-proxy="${repoMeta.useProxy || false}">Open</button>
-            <button class="copyBtn" data-url="${repoMeta.url}">Copy URL</button>
-          </div>
-        </div>
-      `;
-    }
-    reposArea.innerHTML = out;
-  } catch (err) {
-    console.error(err);
-    reposArea.innerHTML = `<div class="loading-line">Failed to load libraries.</div>`;
-  }
-}
-
-// Handlers
-reposArea.addEventListener("click", (e) => {
-  const btn = e.target.closest(".openBtn");
-  if (!btn) return;
-  const url = btn.dataset.url;
-  const useProxy = btn.dataset.useProxy === "true";
-  openRepo(url, useProxy);
-});
-
-// Event delegation per copiare URL
-reposArea.addEventListener("click", (e) => {
-  const btn = e.target.closest(".copyBtn");
-  if (!btn) return;
-  navigator.clipboard.writeText(btn.dataset.url)
-    .then(() => showToast("Copied URL"))
-    .catch(() => alert("Copy failed"));
-});
-
-async function openRepo(url, useProxy) {
-  viewingRepoUrl = url;
-  window.scrollTo({ top: 0, behavior: "auto" });
-  reposArea.style.display = "none";
-  backBtn.style.display = "block";
-  searchBar.style.display = "flex";
-  appsArea.innerHTML = "";
-  // skeleton loader
-  for(let i=0;i<10;i++){
-    const s = document.createElement("div"); s.className="skeleton"; appsArea.appendChild(s);
-  }
-
-  try {
-    const fetchUrl = useProxy ? proxy + encodeURIComponent(url) : url;
-    const res = await fetch(fetchUrl);
-    const repo = await res.json();
-    const apps = repo.apps || [];
-    currentApps = apps;
-    renderApps(apps.slice(0,20)); // first twenties
-    // infinite for the rest
-    let loaded = 20;
-    window.onscroll = () => {
-      if (window.innerHeight + window.scrollY >= document.body.offsetHeight) {
-        if(loaded < apps.length){
-          renderApps(apps.slice(loaded, loaded+20), true);
-          loaded += 20;
-        }
-      }
-    };
-  } catch (err) {
-    console.error(err);
-    appsArea.innerHTML = `<div class="loading-line">Error loading repo.</div>`;
-  }
-}
-
-function renderApps(apps, append=false){
-  if(!apps || apps.length===0){ if(!append) appsArea.innerHTML=`<div class="loading-line">No apps found.</div>`; return; }
-  if(!append) appsArea.innerHTML="";
-  apps.forEach(app=>{
-    const latest=(app.versions&&app.versions.length)?app.versions[0]:{};
-    const version=latest.version||app.version||"";
-    const desc=app.subtitle||app.localizedDescription||latest.localizedDescription||"";
-    const downloadURL=app.downloadURL||latest.downloadURL||"#";
-    const card=document.createElement("div");
-    card.className="card";
-    card.innerHTML=`
-      <div class="icon"><img src="${app.iconURL||""}" alt=""></div>
-      <div class="title">${app.name||""}</div>
-      <div class="subtitle">${desc}</div>
-      <div class="version">${version?"Version "+version:""}</div>
-      <a class="download" href="${downloadURL}" target="_blank" rel="noopener">Download</a>
-    `;
-    appsArea.appendChild(card);
-  });
-}
-
-backBtn.addEventListener("click",()=>{
-  viewingRepoUrl=null;
-  appsArea.innerHTML="";
-  reposArea.style.display="";
-  backBtn.style.display="none";
-  searchBar.style.display="none";
-  window.scrollTo({ top: 0, behavior: "auto" });
-  window.onscroll = null; // reset infinite scroll
-});
-
-searchInput.addEventListener("input",()=>{
-  const q=searchInput.value.toLowerCase();
-  const filtered=(currentApps||[]).filter(app=>{
-    const latest=(app.versions&&app.versions.length)?app.versions[0]:{};
-    const fields=[app.name, app.subtitle, app.localizedDescription, app.developerName, app.bundleIdentifier, latest.localizedDescription];
-    return fields.some(f=>f&&f.toLowerCase().includes(q));
-  });
-  renderApps(filtered);
-});
-
-loadRepos();
-</script>
 </body>
 </html>
