--- a/index.html
+++ b/index.html
@@ -15,6 +15,13 @@
 <header><h1>chocomilkyX iPA library</h1></header>
 <div id="container">
   <div id="searchBar">
+    <select id="sortSelect" title="Sort apps">
+    <option value="newest">Newest</option>
+    <option value="oldest">Oldest</option>
+    <option value="size_desc">Size ↓</option>
+    <option value="size_asc">Size ↑</option>
+    <option value="version">Version</option>
+    </select>
     <input id="searchInput" type="text" placeholder="Search apps…">
     <button id="importBtn" title="Import Personal Repo">+</button>
   </div>
