--- a/index.html
+++ b/index.html
@@ -15,7 +15,16 @@
 <header><h1>chocomilkyX iPA library</h1></header>
 <div id="container">
   <div id="searchBar">
-    <input id="searchInput" type="text" placeholder="Search apps…">
+    <div class="searchWrap">
+      <input id="searchInput" type="text" placeholder="Search apps…">
+      <select id="sortSelect" title="Sort apps">
+        <option value="newest">Newest</option>
+        <option value="oldest">Oldest</option>
+        <option value="size_desc">Size ↓</option>
+        <option value="size_asc">Size ↑</option>
+        <option value="version">Version</option>
+      </select>
+    </div>
     <button id="importBtn" title="Import Personal Repo">+</button>
   </div>
   <div id="repos"></div>
@@ -24,7 +33,7 @@
 </div>
 <div id="toast"></div>
 <footer class="footer">
-  <span>© 2026 chocomilkyX iPA library - made by @gablilli on</span>
+  <span>© 2026 chocomilkyX iPA library - made by @gablilli</span>
 
   <a
     href="https://github.com/gablilli/chocomilkyX"
